tests/ui/modules/mod_file_disambig.rs
//! related issue <https://github.com/rust-lang/rust/issues/4116>

mod mod_file_disambig_aux; //~ ERROR file for module `mod_file_disambig_aux` found at both

fn main() {}
